Todo: delete game over text onj restart AND restart button restart game -> solve first highscore make restart button make info text class -> jump activated, score +5seconds fix font on controls question
cant split intervals.
 solve refresh restart

--- a/style.css
+++ b/style.css
@@ -74,9 +74,18 @@ button{
 
 .restartButton {
     position: fixed;
-    top: 37%;
+    top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 100px;
+    height: 50px;
+}
+
+.newGameButton {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 200px;
     height: 50px;
 }
